--- a/substitutions/css/substitutions.css
+++ b/substitutions/css/substitutions.css
@@ -1,11 +1,4 @@
 
-@font-face {
-
-    font-family: "xkcd";
-
-    src: url("../fonts/xkcd.otf") format("opentype");
-
-}
 
 .title {
 
@@ -19,7 +12,7 @@
 
 body, h1, h3, button, .btn {
 
-    font-family: "xkcd";
+    font-family: "Georgia", "sans-serif";
 
     word-spacing: 2px;
 
